-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Major Change
-
ALL
-
v8.2, v8.0, v7.0
-
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This repros on master, 8.0, and 7.0.
- is depended on by
-
SERVER-113686 Improve fast-check wildcard index model to support wildcard exclusion projections in PBT
-
- Closed
-
-
SERVER-113687 Make fuzzer wildcardProjection model more robust
-
- Closed
-
-
COMPASS-10110 Investigate changes in SERVER-113685: Segfault for query on compound wildcard index
-
- Closed
-
-
TOOLS-4014 Investigate changes in SERVER-113685: Segfault for query on compound wildcard index
-
- Closed
-
- is related to
-
SERVER-113897 Report existence of invalid compound wildcard index
-
- Closed
-
-
SERVER-113900 Add run-time check to plan enumerator code
-
- Closed
-
-
SERVER-114230 Remove startup log to detect invalid wildcard index
-
- Needs Scheduling
-
-
SERVER-114229 Add pre-flight check to FCV upgrade for invalid wildcard index
-
- Closed
-
- related to
-
SERVER-114084 Audit static_casts of IndexTag and casts in plan_enumerator.cpp
-
- Closed
-
-
SERVER-132386 Remove invalid compound wildcard index FCV upgrade barrier
-
- Needs Scheduling
-
-
SERVER-114629 Upgrade db-contrib-tool to 2.1.0
-
- Closed
-
-
SERVER-119231 fill holes in jstests testing coverage related to _id
-
- Closed
-