SERVER-113685 SERVER-113900 SERVER-113897 Disallow wildcard index creation where projection is only _id exclusion (#44569)

GitOrigin-RevId: 6841449b634f9cea3d404e7615a0fe6e9e927db4